[package]
name = "Lorenzo-WBA-PreReqQ4-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.17.5"
bs58 = "0.5.0"
solana-client = "1.17.5"
solana-program = "1.17.5"
borsh = "0.10.3"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }